# ai-ml

./: README.md  chatgpt.md  install-apps.ipynb  pyproject.toml  test.ipynb
case-studies/: co2_emission.ipynb  e_commerce_marketing_sales.ipynb
data/: sachins_odi_career.csv
