[project]
name = "ai-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.0.2",
    "pandas==2.2.2",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
]

[dependency-groups]
dev = [
    "notebook==7.4.7",
    "ruff==0.14.5",
    "pandas-stubs==2.3.2.250926",
]
